Create ExceptionMappers and align Tools Service
