# cli/src/main/java/ai/wanaku/cli/main/services/ResourcesService.java
@@ -2,6 +2,7 @@ package ai.wanaku.cli.main.services;
 
 import java.util.List;
 
+import ai.wanaku.api.types.WanakuResponse;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.POST;
 import jakarta.ws.rs.PUT;
@@ -12,6 +13,7 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 
 import ai.wanaku.api.types.ResourceReference;
+import org.jboss.resteasy.reactive.RestResponse;
 
 @Path("/api/v1/resources")
 public interface ResourcesService {
@@ -24,7 +26,7 @@ public interface ResourcesService {
     @Path("/list")
     @GET
     @Produces(MediaType.APPLICATION_JSON)
-    List<ResourceReference> list();
+    RestResponse<WanakuResponse<List<ResourceReference>>> list();
 
     @Path("/remove")
     @PUT
