# routers/wanaku-router/src/main/webui/openapi.yaml
@@ -1,223 +1,5 @@
 ---
 openapi: 3.1.0
-paths:
-  /api/v1/management/targets/resources/configure/{service}:
-    put:
-      parameters:
-      - name: service
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: option
-        in: query
-        schema:
-          type: string
-      - name: value
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Resources Configure
-      tags:
-      - Targets Resource
-  /api/v1/management/targets/resources/link:
-    put:
-      parameters:
-      - name: service
-        in: query
-        schema:
-          type: string
-      - name: target
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Resources Link
-      tags:
-      - Targets Resource
-  /api/v1/management/targets/resources/list:
-    get:
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  $ref: "#/components/schemas/Service"
-      summary: Resources List
-      tags:
-      - Targets Resource
-  /api/v1/management/targets/resources/unlink:
-    put:
-      parameters:
-      - name: service
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Resources Unlink
-      tags:
-      - Targets Resource
-  /api/v1/management/targets/tools/configure/{service}:
-    put:
-      parameters:
-      - name: service
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: option
-        in: query
-        schema:
-          type: string
-      - name: value
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Tools Configure
-      tags:
-      - Targets Resource
-  /api/v1/management/targets/tools/link:
-    put:
-      parameters:
-      - name: service
-        in: query
-        schema:
-          type: string
-      - name: target
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Tools Link
-      tags:
-      - Targets Resource
-  /api/v1/management/targets/tools/list:
-    get:
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  $ref: "#/components/schemas/Service"
-      summary: Tool List
-      tags:
-      - Targets Resource
-  /api/v1/management/targets/tools/unlink:
-    put:
-      parameters:
-      - name: service
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Tools Unlink
-      tags:
-      - Targets Resource
-  /api/v1/resources/expose:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ResourceReference"
-        required: true
-      responses:
-        "200":
-          description: OK
-      summary: Expose
-      tags:
-      - Resources Resource
-  /api/v1/resources/list:
-    get:
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponseListResourceReference"
-      summary: List
-      tags:
-      - Resources Resource
-  /api/v1/resources/remove:
-    put:
-      parameters:
-      - name: resource
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Remove
-      tags:
-      - Resources Resource
-  /api/v1/tools/add:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ToolReference"
-        required: true
-      responses:
-        "200":
-          description: OK
-      summary: Add
-      tags:
-      - Tools Resource
-  /api/v1/tools/list:
-    get:
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/ToolReference"
-        "500":
-          content:
-            application/json:
-              schema:
-                type: string
-      summary: List
-      tags:
-      - Tools Resource
-  /api/v1/tools/remove:
-    put:
-      parameters:
-      - name: tool
-        in: query
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-      summary: Remove
-      tags:
-      - Tools Resource
 components:
   schemas:
     Configuration:
@@ -303,6 +85,12 @@ components:
       properties:
         message:
           type: string
+    WanakuResponse:
+      type: object
+      properties:
+        error:
+          $ref: "#/components/schemas/WanakuError"
+        data: {}
     WanakuResponseListResourceReference:
       type: object
       properties:
@@ -312,6 +100,252 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/ResourceReference"
+    WanakuResponseListToolReference:
+      type: object
+      properties:
+        error:
+          $ref: "#/components/schemas/WanakuError"
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/ToolReference"
+    WanakuResponseMapStringService:
+      type: object
+      properties:
+        error:
+          $ref: "#/components/schemas/WanakuError"
+        data:
+          type: object
+          additionalProperties:
+            $ref: "#/components/schemas/Service"
+paths:
+  /api/v1/management/targets/resources/configure/{service}:
+    put:
+      parameters:
+      - name: service
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: option
+        in: query
+        schema:
+          type: string
+      - name: value
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+      summary: Resources Configure
+      tags:
+      - Targets Resource
+  /api/v1/management/targets/resources/link:
+    put:
+      parameters:
+      - name: service
+        in: query
+        schema:
+          type: string
+      - name: target
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+      summary: Resources Link
+      tags:
+      - Targets Resource
+  /api/v1/management/targets/resources/list:
+    get:
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/WanakuResponseMapStringService"
+      summary: Resources List
+      tags:
+      - Targets Resource
+  /api/v1/management/targets/resources/unlink:
+    put:
+      parameters:
+      - name: service
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+      summary: Resources Unlink
+      tags:
+      - Targets Resource
+  /api/v1/management/targets/tools/configure/{service}:
+    put:
+      parameters:
+      - name: service
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: option
+        in: query
+        schema:
+          type: string
+      - name: value
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+      summary: Tools Configure
+      tags:
+      - Targets Resource
+  /api/v1/management/targets/tools/link:
+    put:
+      parameters:
+      - name: service
+        in: query
+        schema:
+          type: string
+      - name: target
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Wanaku error
+          content: {}
+      summary: Tools Link
+      tags:
+      - Targets Resource
+  /api/v1/management/targets/tools/list:
+    get:
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/WanakuResponseMapStringService"
+      summary: Tool List
+      tags:
+      - Targets Resource
+  /api/v1/management/targets/tools/unlink:
+    put:
+      parameters:
+      - name: service
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+      summary: Tools Unlink
+      tags:
+      - Targets Resource
+  /api/v1/resources/expose:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ResourceReference"
+        required: true
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Wanaku error
+          content: {}
+      summary: Expose
+      tags:
+      - Resources Resource
+  /api/v1/resources/list:
+    get:
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/WanakuResponseListResourceReference"
+        "500":
+          description: Wanaku error
+          content: {}
+      summary: List
+      tags:
+      - Resources Resource
+  /api/v1/resources/remove:
+    put:
+      parameters:
+      - name: resource
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Wanaku error
+          content: {}
+      summary: Remove
+      tags:
+      - Resources Resource
+  /api/v1/tools/add:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ToolReference"
+        required: true
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Wanaku error
+          content: {}
+      summary: Add
+      tags:
+      - Tools Resource
+  /api/v1/tools/list:
+    get:
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/WanakuResponseListToolReference"
+        "500":
+          description: Wanaku error
+          content: {}
+      summary: List
+      tags:
+      - Tools Resource
+  /api/v1/tools/remove:
+    put:
+      parameters:
+      - name: tool
+        in: query
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Wanaku error
+          content: {}
+      summary: Remove
+      tags:
+      - Tools Resource
 info:
   title: wanaku-router API
   version: 0.0.2-SNAPSHOT
