# servers/wanaku-server-quarkus/src/main/java/ai/wanaku/server/quarkus/api/v1/exceptions/WanakuExceptionMapper.java
@@ -1,14 +1,24 @@
 package ai.wanaku.server.quarkus.api.v1.exceptions;
 
 import ai.wanaku.api.exceptions.WanakuException;
-import ai.wanaku.server.quarkus.api.v1.models.WanakuResponse;
+import ai.wanaku.api.types.WanakuResponse;
 import jakarta.ws.rs.core.Response;
 import jakarta.ws.rs.ext.ExceptionMapper;
+import jakarta.ws.rs.ext.Provider;
+import org.eclipse.microprofile.openapi.annotations.media.Content;
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
 import org.jboss.logging.Logger;
 
+@Provider
 public class WanakuExceptionMapper implements ExceptionMapper<WanakuException> {
     private static final Logger LOG = Logger.getLogger(WanakuExceptionMapper.class);
 
+    @APIResponse(
+            responseCode = "500",
+            description = "Wanaku error",
+            content = @Content(schema = @Schema(implementation = WanakuResponse.class))
+    )
     @Override
     public Response toResponse(WanakuException e) {
         LOG.error(e);
